--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "projecthunt",
   "version": "1.0.0",
-  "description": "",
+  "description": "Project hunt project made with djago. \r Here peopel can create account, login and post projects.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Milan",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.2.1"
-  }
+    "bootstrap": "^4.2.1",
+    "vue": "^2.6.10"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mlnlmsl/django-projecthunt.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mlnlmsl/django-projecthunt/issues"
+  },
+  "homepage": "https://github.com/mlnlmsl/django-projecthunt#readme"
 }
